# dotfiles

./: .gitignore  ContainerFile  LICENSE  workspace.code-workspace  workspace.yml
tools/compose/: README.md  pyproject.toml
tools/compose/.cursor/rules/: code-standards.mdc
tools/compose/compose/: composer.py  context.py  main.py  models.py
tools/compose/compose/commands/: build.py  image.py  network.py  runtime.py  workspace.py
tools/compose/tests/: conftest.py  test_composer.py  test_context.py  test_main.py
tools/compose/tests/commands/: test_build.py  test_expose.py  test_image.py  test_network.py  test_runtime.py  test_workspace.py
tools/compose/tests/models/: test_connection_url.py  test_connection_url_from_string.py  test_connection_url_to_string.py  test_connection_url_validation.py  test_container_build_feature.py  test_container_image_feature.py  test_expose_feature.py  test_feature.py  test_mount_point.py  test_runtime_feature.py  test_workspace_feature.py
tools/devcc/: .coveragerc  README.md  pyproject.toml
tools/devcc/.cursor/rules/: code-standards.mdc
tools/devcc/devcc/: __init__.py  composer.py  context.py  main.py  models.py  pyproject.toml
tools/devcc/devcc/commands/: build.py  expose.py  image.py  network.py  runtime.py  workspace.py
tools/devcc/devcc/commands/container/: __init__.py  build.py  image.py
tools/devcc/tests/: conftest.py  test_composer.py  test_context.py  test_main.py
tools/devcc/tests/commands/: test_build.py  test_expose.py  test_image.py  test_network.py  test_runtime.py  test_workspace.py
tools/devcc/tests/commands/container/: test_build.py  test_image.py
tools/devcc/tests/models/: test_connection_url.py  test_connection_url_from_string.py  test_connection_url_to_string.py  test_connection_url_validation.py  test_container_build_feature.py  test_container_feature.py  test_container_image_feature.py  test_expose_feature.py  test_feature.py  test_mount_point.py  test_runtime_feature.py  test_workspace_feature.py
tools/devcontainer-composer/: README.md  pyproject.toml
tools/devcontainer-composer/devcontainer_composer/: __init__.py  cli.py
tools/devm/: .gitignore  README.md  pyproject.toml
tools/devm/devm/: handlers.py  main.py
tools/devm/tests/: conftest.py  test_main.py  test_merge_ini.py  test_merge_json.py  test_merge_yaml.py  test_validate_output.py  test_validate_path_format.py  test_validate_sources.py
tools/ignite/: .env  pyproject.toml  test.yml
tools/ignite/.github/workflows/: ci.yml
tools/ignite/files/vscode/settings/: coverage-gutters.json  on-save.json
tools/ignite/files/vscode/tasks/poetry/: env.json  (+7 more)
tools/ignite/ignite/: cli.py  composers.py  logging.py  main.py  mergers.py  resolvers.py  utils.py
tools/ignite/ignite/models/: common.py  config.py  container.py  fs.py  policies.py  projects.py  settings.py  variables.py  workspace.py
tools/ignite/scripts/: build.py  package.py  pyinstaller.py  utils.py
tools/ignite/tests/: conftest.py  test_minimal_configuration.py
tools/ignite/tests/integration/: test_cli_workflows.py
tools/ignite/tests/integration/container/: test_workspace_section.py
tools/ignite/tests/unit/: test_path_resolver.py
tools/ignite/tests/unit/composers/: test_composer.py  test_container_composer.py  test_workspace_composer.py
tools/ignite/tests/unit/models/: test_identifier.py  test_policies.py
tools/ignite/tests/unit/utils/: test_load_yaml_config.py  test_merge_dicts.py
tools/mutex/: pyproject.toml
tools/mutex-cli/: pyproject.toml
tools/mutex-cli/mutex_cli/: __init__.py  main.py
tools/mutex/examples/: basic_usage.py
tools/mutex/mutex/: service.py
tools/mutex/mutex/database/: base.py  models.py  postgresql.py  record.py  statement.py
tools/poexy/: pyproject.toml
tools/poexy-core/: PKG-INFO  README.md  pyproject.toml
tools/poexy-core/poexy_core/: api.py
tools/poexy-core/poexy_core/builders/: binary.py  builder.py  editable.py  sdist.py  wheel.py
tools/poexy-core/poexy_core/builders/hooks/: binary.py  hook.py
tools/poexy-core/poexy_core/manifest/: manifest.py
tools/poexy-core/poexy_core/metadata/: builder.py  fields.py
tools/poexy-core/poexy_core/pyinstaller/: builder.py  venv.py
tools/poexy-core/poexy_core/pyproject/: exceptions.py  toml.py
tools/poexy-core/poexy_core/pyproject/tables/: package.py  poexy.py
tools/poexy-core/poexy_core/utils/: build.py  pip.py  python_impl.py  subprocess_rt.py  venv.py
tools/poexy-core/scripts/: test-default.sh  test-repeat-setup.sh
tools/poexy-core/tests/: conftest.py  pip.py  test_binary_entrypoint.py  test_binary_name.py  test_binary_with_local_deps.py  test_binary_with_only_dir_dep.py  test_binary_with_only_file_dep.py  test_binary_with_only_url_dep.py  test_binary_with_only_vcs_dep.py  test_binary_with_public_dep.py  test_binary_without_config.py  test_build_self.py  test_default.py  test_editable.py  test_inclusions.py  test_licence_deprecated_file.py  test_licence_expression.py  test_licence_file.py  test_readme_markdown.py  test_readme_rst.py  test_readme_without_content_type.py  test_wheel_binary.py  test_wheel_source.py  test_wheel_source_binary.py  test_wheel_source_binary_with_local_dep.py  test_wheel_source_with_local_dep.py  test_wheel_source_with_mix_deps.py
tools/poexy-core/tests/conftests/: assert_builds.py  executable.py  paths.py  pip.py  servers.py
tools/poexy-core/tests/samples/binary_with_local_deps/: pyproject.toml
tools/poexy-core/tests/samples/binary_with_only_dir_dep/: pyproject.toml
tools/poexy-core/tests/samples/binary_with_only_file_dep/: pyproject.toml
tools/poexy-core/tests/samples/binary_with_only_url_dep/: pyproject.toml
tools/poexy-core/tests/samples/binary_with_only_vcs_dep/: pyproject.toml
tools/poexy-core/tests/samples/binary_with_public_dep/: pyproject.toml
tools/poexy-core/tests/samples/default/: pyproject.toml
tools/poexy-core/tests/samples/editable/: pyproject.toml
tools/poexy-core/tests/utils/: markers.py  servers.py  venv.py
tools/poexy/poexy/: cli.py  main.py  poetry.py  pyproject.py  safe_command.py  safe_print.py  wheel.py
(+162 files in other folders)
