[tool.poetry]
name = "devcontainer-composer"
version = "0.1.0"
description = "CLI tool to compose devcontainer.json files from templates"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 