[tool.poetry]
name = "ignite"
version = "0.1.0"
description = "CLI tool to initialize and manage development environment configuration from a workspace.yml file"
packages = [{include = "ignite"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
pydantic = "^2.0.0"
jsonschema = "^4.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.7.0"
assertpy = "^1.1"
coverage = "^7.3.2"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
ignite = "ignite.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[tool.coverage.run]
source = ["ignite"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/__pycache__/*",
    "*/.?*/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[tool.coverage.paths]
source = ["ignite"]
