[project]
name = "binary-with-local-deps"
version = "1.0.0"
dependencies = [
    "library @ ../library/library-1.0.0-py3-none-any.whl",
    "library @ ../library",
]

[build-system]
requires = ["poexy-core"]
build-backend = "poexy_core.api"

[tool.poexy.package.binary_with_local_deps]
source = "src"

[tool.poexy.wheel]
format = ["binary"]

[tool.poexy.binary]
name = "binary-with-local-deps"
entry_point = "src.__init__"