[project]
name = "binary-with-only-url-dep"
version = "1.0.0"
dependencies = [
    "library @ http://localhost:8000/library-1.0.0-py3-none-any.whl"
]

[build-system]
requires = ["poexy-core"]
build-backend = "poexy_core.api"

[tool.poexy.package.binary_with_only_url_dep]
source = "src"

[tool.poexy.wheel]
format = ["binary"]

[tool.poexy.binary]
name = "binary-with-only-url-dep"
entry_point = "src.__init__"