[project]
name = "binary-with-public-dep"
version = "1.0.0"
dependencies = [
    "typer>=0.16.0",
]

[build-system]
requires = ["poexy-core"]
build-backend = "poexy_core.api"

[tool.poexy.package.binary_with_public_dep]
source = "src"

[tool.poexy.wheel]
format = ["binary"]

[tool.poexy.binary]
name = "binary-with-public-dep"
entry_point = "src.__init__"